[metadata]
name = ubuntuwebscanner
version = 1.0.0
author = Timothy Johnson II
author_email = tiomthyallenjohnsonii@gmail.com
description = A lightweight Flask-based dashboard for scanning and monitoring LAN devices
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/tjohnsonII/UbuntuWebServer
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: System Administrators
    Topic :: System :: Networking :: Monitoring
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Framework :: Flask

[options]
packages = find:
include_package_data = true
install_requires =
    flask
    nmap
    manuf
    mac-vendor-lookup
    aiofiles
    python-dotenv
python_requires = >=3.10

[options.package_data]
* =
    templates/*
    static/*

[options.entry_points]
console_scripts =
    runscanner = app:main
